[gd_scene load_steps=7 format=2]

[ext_resource path="res://new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Styles/StandardPanel.tres" type="StyleBox" id=2]
[ext_resource path="res://Scripts/Page.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PallettePicker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/ColorPicker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Styles/CloseBtn.tres" type="StyleBox" id=6]

[node name="Page" type="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -1.48767
margin_top = 0.487671
margin_right = 688.512
margin_bottom = 1290.49
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 101.941 ],
"_edit_vertical_guides_": [ 475.673 ]
}

[node name="PAGE" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 345.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "PAge Name Here"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PallettePicker" parent="." index="1" instance=ExtResource( 4 )]

visible = false

[node name="ColorPicker" parent="." index="2" instance=ExtResource( 5 )]

margin_left = 3.0
margin_top = 450.0
margin_right = 723.0
margin_bottom = 1170.0
rect_scale = Vector2( 0.95, 0.95 )

[node name="CloseBtn" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_right = 660.0
margin_bottom = 30.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "X"
flat = false
align = 1

[node name="AutoMode" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_top = 110.0
margin_right = 426.0
margin_bottom = 124.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "AutoMode"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Prev" type="Button" parent="AutoMode" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 68.297
margin_top = -5.00697
margin_right = 104.297
margin_bottom = 24.993
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="Next" type="Button" parent="AutoMode" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 168.262
margin_top = -5.00697
margin_right = 204.262
margin_bottom = 24.993
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[node name="Label" type="Label" parent="AutoMode" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 97.7169
margin_top = -2.02785
margin_right = 172.717
margin_bottom = 19.9721
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PalleteMode" type="CheckButton" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_top = 180.0
margin_right = 559.0
margin_bottom = 220.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "PalleteMode"
flat = false
align = 2

[node name="AutoS" type="LineEdit" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 555.0
margin_top = 145.63
margin_right = 613.0
margin_bottom = 169.63
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
max_length = 4
focus_mode = 2
context_menu_enabled = true
placeholder_text = "10"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Label" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 403.0
margin_top = 145.0
margin_right = 490.0
margin_bottom = 164.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Auto Timeout"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PatternName" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 350.0
margin_right = 488.0
margin_bottom = 370.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pattern Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PatPrevBtn" type="Button" parent="PatternName" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_right = 57.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<<"
flat = false
align = 1

[node name="PatNextBtn" type="Button" parent="PatternName" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 281.0
margin_right = 319.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">>"
flat = false
align = 1

[node name="MirrorModeName" type="Label" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 310.0
margin_right = 488.0
margin_bottom = 330.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pattern Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MirPrevBtn" type="Button" parent="MirrorModeName" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 19.0
margin_right = 57.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<<"
flat = false
align = 1

[node name="MirNextBtn" type="Button" parent="MirrorModeName" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 281.0
margin_right = 319.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">>"
flat = false
align = 1

[node name="PatternNameLbl" type="Label" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 350.0
margin_right = 105.0
margin_bottom = 370.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pattern:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MirrorModeLbl" type="Label" parent="." index="11"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 310.0
margin_right = 105.0
margin_bottom = 330.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Mirror Mode:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SendButton" type="Button" parent="." index="12"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 236.602
margin_top = 1226.22
margin_right = 358.602
margin_bottom = 1256.22
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Send Message"
flat = false
align = 1

[node name="Messge" type="LineEdit" parent="." index="13"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 390.0
margin_right = 469.0
margin_bottom = 414.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="MessageLbl" type="Label" parent="Messge" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -75.0
margin_top = 6.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Message:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StrChk" type="CheckBox" parent="." index="14" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 110.0
margin_right = 204.0
margin_bottom = 134.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="MatChk" type="CheckBox" parent="." index="15" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 150.0
margin_right = 204.0
margin_bottom = 174.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="RtrChk" type="CheckBox" parent="." index="16" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 190.0
margin_right = 204.0
margin_bottom = 214.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="TerChk" type="CheckBox" parent="." index="17" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_top = 230.0
margin_right = 204.0
margin_bottom = 254.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="StrChkLbl" type="Label" parent="." index="18" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 120.0
margin_right = 146.0
margin_bottom = 139.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Strips"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MatChkLbl" type="Label" parent="." index="19" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 160.0
margin_right = 146.0
margin_bottom = 179.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Matrix"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RtrChkLbl" type="Label" parent="." index="20" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 200.0
margin_right = 146.0
margin_bottom = 219.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Router"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TerChkLbl" type="Label" parent="." index="21" groups=[
"chkBox",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 240.0
margin_right = 146.0
margin_bottom = 259.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Term"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InStrMode" type="CheckButton" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 220.0
margin_right = 503.0
margin_bottom = 260.0
rect_scale = Vector2( 1.6, 1.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Individual Strip Addressing"
flat = false
align = 2

[node name="AddStrNum" type="Label" parent="InStrMode" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 31.0
margin_right = 245.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "1"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AddStrLbl" type="Label" parent="InStrMode" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 58.0
margin_top = 31.0
margin_right = 171.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Strip To Address"
align = 2
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PrevBtn" type="Button" parent="InStrMode" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 31.0
margin_right = 206.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="NextBtn" type="Button" parent="InStrMode" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 245.0
margin_top = 31.0
margin_right = 281.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[connection signal="pressed" from="CloseBtn" to="." method="_on_CloseBtn_pressed"]

[connection signal="pressed" from="AutoMode/Prev" to="." method="_on_Prev_pressed"]

[connection signal="pressed" from="AutoMode/Next" to="." method="_on_Next_pressed"]

[connection signal="toggled" from="PalleteMode" to="." method="_on_PalleteMode_toggled"]

[connection signal="text_changed" from="AutoS" to="." method="_on_LineEdit_text_changed"]

[connection signal="pressed" from="PatternName/PatPrevBtn" to="." method="_on_PatPrevBtn_pressed"]

[connection signal="pressed" from="PatternName/PatNextBtn" to="." method="_on_PatNextBtn_pressed"]

[connection signal="pressed" from="MirrorModeName/MirPrevBtn" to="." method="_on_MirPrevBtn_pressed"]

[connection signal="pressed" from="MirrorModeName/MirNextBtn" to="." method="_on_MirNextBtn_pressed"]

[connection signal="pressed" from="SendButton" to="." method="_on_SendButton_pressed"]

[connection signal="text_changed" from="Messge" to="." method="_on_Messge_text_changed"]

[connection signal="toggled" from="StrChk" to="." method="_on_StrChk_toggled"]

[connection signal="toggled" from="MatChk" to="." method="_on_MatChk_toggled"]

[connection signal="toggled" from="RtrChk" to="." method="_on_RtrChk_toggled"]

[connection signal="toggled" from="TerChk" to="." method="_on_TerChk_toggled"]

[connection signal="toggled" from="InStrMode" to="." method="_on_InStrMode_toggled"]

[connection signal="pressed" from="InStrMode/PrevBtn" to="." method="_on_PrevBtn_pressed"]

[connection signal="pressed" from="InStrMode/NextBtn" to="." method="_on_NextBtn_pressed"]


